fix spacing issue

--- a/styles.css
+++ b/styles.css
@@ -17,9 +17,6 @@ html {
   overflow-x: hidden;
 }
 
-.container {
-  position: relative;
-}
 .hero a:hover {
   background-color: #00ff6c;
   color: #000;
@@ -45,6 +42,7 @@ a {
 nav a {
   font-size: 2rem;
 }
+
 header {
   position: absolute;
   width: 100%;
@@ -65,6 +63,14 @@ header {
   align-items: center;
   flex-direction: column;
   text-align: center;
+}
+.hero a {
+  outline: 2px solid #fff;
+  border: none;
+}
+.hero a:hover {
+  outline-offset: -1rem;
+  outline-color: #000;
 }
 .primary-heading {
   font-size: 3rem;
@@ -203,14 +209,13 @@ footer {
     font-size: 2rem;
     margin-bottom: 2rem;
     grid-column: 1/-1;
-    padding: 0 2rem;
   }
 }
 .footer-nav {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   font-size: 2rem;
-
+  padding: 0 2rem;
   ul {
     list-style-type: none;
     justify-self: center;
@@ -228,7 +233,7 @@ footer {
   }
 }
 @media (min-width: 61.25rem) {
-  .logo{
+  .logo {
     width: 15rem;
   }
   .hero {
